# sakila-data-warehouse-etl

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_DICTIONARY.md  POWER_BI_GUIDE.md  README.md  main_etl.py  pyproject.toml
.streamlit/: config.toml
config/: config.py
notebooks/: 00_test_config.ipynb  01_extraccion.ipynb
sql/: create_datamart.sql  create_staging.sql
src/: 02_staging.ipynb  03_transformacion.ipynb  extractor.py  logger_config.py  staging.py  transformer.py  validator.py
streamlit_app/: README.md  app.py
streamlit_app/components/: charts.py  filters.py  kpi_cards.py
streamlit_app/pages/: 1_Ventas.py  2_Películas.py  3_Categorías.py  4_Tiendas.py
streamlit_app/utils/: db_connection.py  queries.py
